@@ -1,3 +1,15 @@
+2012-10-04  Adam Barth  <abarth@webkit.org>
+
+        [V8] NotificationCenter leaks because it uses buggy custom bindings
+        https://bugs.webkit.org/show_bug.cgi?id=98445
+
+        Reviewed by Tony Chang.
+
+        There's no reason to use custom bindings here. All they do is cause leaks..
+
+        * Modules/notifications/NotificationCenter.idl:
+        * bindings/v8/custom/V8NotificationCenterCustom.cpp:
+
 2012-10-04  Tab Atkins  <jackalmage@gmail.com>
 
         Selector specificity categories "overflow" into higher categories
